force-app/main/default/objects/Extole_Sync_Log__c/Extole_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>Extole Sync Log</label>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>LOG-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Extole Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>