force-app/main/default/objects/Extole_Sync_Log__c/fields/Poll_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Poll_Attempts__c</fullName>
    <label>Poll Attempts</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>