force-app/main/default/objects/Extole_Sync_Log__c/fields/Sync_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Sync_Batch_Id__c</fullName>
    <label>Sync Batch Id</label>
    <type>Text</type>
    <length>36</length>
</CustomField>