force-app/main/default/objects/Extole_Sync_Log__c/fields/Sync_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Sync_Timestamp__c</fullName>
    <label>Sync Timestamp</label>
    <type>DateTime</type>
</CustomField>