force-app/main/default/objects/Extole_Sync_Log__c/fields/Value_Extracted__c.field-meta.xml
<CustomField>
    <fullName>Value_Extracted__c</fullName>
    <label>Value Extracted</label>
    <type>Text</type>
    <length>255</length>
</CustomField>